os/configs/horizon-lb.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: horizon-lb
  namespace: openstack
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    application: horizon
    component: server
  sessionAffinity: None
  type: LoadBalancer
