os/configs/ceph-ingress-netpol.yaml
# Expand stock netpol (for ceph-radosgw):
# - allow from nginx-ingress ns
# - allow from horizon pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ceph-ingress-netpol
  namespace: openstack
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/part-of: ingress-nginx
    - podSelector:
        matchLabels:
          application: horizon
    ports:
    - port: 8088
      protocol: TCP
  podSelector:
    matchLabels:
      application: ceph
  policyTypes:
  - Ingress
